feat:☑️created sections top

--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
         <p>Conheça nossos serviços e encontre um cuidado para cada momento da sua vida.</p>
     </div>
     <!-- section com imagem a esquerda -->
-    <div>
+    <div class="titulo-section-servicos">
         <h3>Nossos Cuidados</h3>
     </div>
-    <div class="wrapper-aspect-ratio banner_servico">
+    <div class="wrapper-aspect-ratio banner_servico lp_01">
         <div class="servico inner">
             <picture class="">
-                <source media="(max-width: 1100px)" srcset="files/banner_topo_mobile.png">
-                <img width="100%" height="auto" src="files/banner_topo.png" alt="banner artista Cahro Naka">
+                <source media="(max-width: 1100px)" srcset="files/image_lp_orientacao_de_uso_mobile.png">
+                <img width="100%" height="auto" src="files/image_lp_orientacao_de_uso (2).png" alt="banner lp orientação de uso">
             </picture>
             <div class="texto-servico">
-                <h2>Cuidar é:
+                <h2>Cuidar é: <br>
                     Instalar e Ensinar sobre o uso</h2>
                 <h3>Instalação e Orientação de uso</h3>
                 <p>Já parou para pensar que cuidar dos produtos que adquirimos e usá-los da maneira correta são práticas
                     essenciais para
                     promover uma vida mais sustentável e minimizar o impacto ambiental?</p>
-                <buttton>Saiba mais</buttton>
+                <button>Saiba mais</button>
             </div>
         </div>
     </div>
     <!-- section com imagem a direita -->
-    <div class="wrapper-aspect-ratio banner_servico">
+    <div class="wrapper-aspect-ratio banner_servico lp_02">
         <div class="servico inner">
             <div class="texto-servico">
                 <h2>Cuidar é:
@@ -68,7 +68,7 @@
                 <p>Já parou para pensar que cuidar dos produtos que adquirimos e usá-los da maneira correta são práticas
                     essenciais para
                     promover uma vida mais sustentável e minimizar o impacto ambiental?</p>
-                <buttton>Saiba mais</buttton>
+                <button>Saiba mais</button>
             </div>
             <picture class="inner">
                 <source media="(max-width: 1100px)" srcset="files/banner_topo_mobile.png">
