feat:created version desktop and mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             especialista Fast Shop é alguém disposto a te receber bem, a ter respeito, a fazer bem feito, a aprender e
             ensinar, ser
             gentil e servir bem.</p>
-        <p>Conheça nossos serviços e encontre um cuidado para cada momento da sua vida.</p>
+        <p class="texto-chamada-topo">Conheça nossos serviços e encontre um cuidado para cada momento da sua vida.</p>
     </div>
     <!-- section com imagem a esquerda -->
     <div class="titulo-section-servicos">
@@ -45,9 +45,9 @@
         <div class="servico inner">
             <picture class="">
                 <source media="(max-width: 1100px)" srcset="files/image_lp_orientacao_de_uso_mobile.png">
-                <img width="100%" height="auto" src="files/image_lp_orientacao_de_uso (2).png" alt="banner lp orientação de uso">
+                <img width="100%" height="auto" src="files/image_lp_orientacao_de_uso.png" alt="serviço de orientação de uso">
             </picture>
-            <div class="texto-servico">
+            <div class="texto-servico orientacao">
                 <h2>Cuidar é: <br>
                     Instalar e Ensinar sobre o uso</h2>
                 <h3>Instalação e Orientação de uso</h3>
@@ -58,11 +58,66 @@
             </div>
         </div>
     </div>
+    <hr>
     <!-- section com imagem a direita -->
     <div class="wrapper-aspect-ratio banner_servico lp_02">
         <div class="servico inner">
-            <div class="texto-servico">
-                <h2>Cuidar é:
+            <div class="texto-servico seguro">
+                <h2>Cuidar é: <br>
+                    Garantir mais tempo com o que funciona bem</h2>
+                <h3>Instalação e Orientação de uso</h3>
+                <p>Já parou para pensar que cuidar dos produtos que adquirimos e usá-los da maneira correta são práticas essenciais para
+                promover uma vida mais sustentável e minimizar o impacto ambiental?</p>
+                <button>Saiba mais</button>
+            </div>
+            <picture class="inner">
+                <source media="(max-width: 1100px)" srcset="files/imagem_seguro_mobile.png">
+                <img width="100%" height="auto" src="files/imagem_seguro.png" alt="serviço de seguro">
+            </picture>
+        </div>
+    </div>
+    <hr>
+    <div class="wrapper-aspect-ratio banner_servico lp_01">
+        <div class="servico inner">
+            <picture class="">
+                <source media="(max-width: 1100px)" srcset="files/imagem_garantia_estendi_mobile.png">
+                <img width="100%" height="auto" src="files/imagem_garantia.png" alt="serviço de garantia estendida">
+            </picture>
+            <div class="texto-servico garantia">
+                <h2>Cuidar é: <br>
+                    Garantir mais tempo com o que funciona bem</h2>
+                <h3>Garantia Estendida</h3>
+                <p>Para adotar hábitos de consumo mais conscientes e saudáveis, além da escolha de produtos de qualidade, é preciso
+                enxergar a relação que temos com os equipamentos que fazem parte da nossa vida, e podem durar muitos anos a mais que o
+                prazo do fabricante.</p>
+                <button>Saiba mais</button>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <!-- section com imagem a direita -->
+    <div class="wrapper-aspect-ratio banner_servico lp_02">
+        <div class="servico inner">
+            <div class="texto-servico suporte">
+                <h2>Cuidar é: <br>
+                    Configurar e deixar pronto para usar</h2>
+                <h3>Suporte Técnico</h3>
+                <p>Na Fast Shop, você pode contar com um time de especialistas que configuram seu notebook, ou seu smartphone ou ainda seu
+                tablet, ensinando em todos os detalhes como usá-los, de forma que você possa ter uma experiência mais completa com sua
+                compra.</p>
+                <button>Saiba mais</button>
+            </div>
+                <picture>
+                    <source media="(max-width: 1100px)" srcset="files/imagem_suporte_tecnico_mobile.png">
+                    <img width="100%" height="auto" src="files/imagem_suport_tecnico.png" alt="serviço de suporte tecnico">
+                </picture>
+        </div>
+    </div>
+    <hr>
+    <div class="wrapper-aspect-ratio banner_servico lp_02">
+        <div class="servico inner">
+            <div class="texto-servico casa">
+                <h2>Cuidar é: <br>
                     Instalar e Ensinar sobre o uso</h2>
                 <h3>Instalação e Orientação de uso</h3>
                 <p>Já parou para pensar que cuidar dos produtos que adquirimos e usá-los da maneira correta são práticas
@@ -70,20 +125,20 @@
                     promover uma vida mais sustentável e minimizar o impacto ambiental?</p>
                 <button>Saiba mais</button>
             </div>
-            <picture class="inner">
-                <source media="(max-width: 1100px)" srcset="files/banner_topo_mobile.png">
-                <img width="100%" height="auto" src="files/banner_topo.png" alt="banner artista Cahro Naka">
-            </picture>
+                <picture>
+                    <source media="(max-width: 1100px)" srcset="files/imagem_casa_inteligente_mobile.png">
+                    <img width="100%" height="auto" src="files/imagem_casa_inteligente.png" alt="serviço de casa inteligente">
+                </picture>
         </div>
     </div>
-
+   <hr>
 
     <!-- imagem com todos so artistas -->
-    <div class="beneficios_suporte">
-        <div class="wrapper-aspect-ratio imagem-avo">
+    <div class="artistas">
+        <div class="wrapper-aspect-ratio grupo-artista">
             <picture class="inner">
-                <source media="(max-width: 1100px)" srcset="files/banner_beneficios_mobile.png">
-                <img width="100%" height="auto" src="files/banner_beneficios.png" alt="Banner beneficios Fast Shop">
+                <source media="(max-width: 1100px)" srcset="files/imagem_grupo_artista_mobile.png">
+                <img width="100%" height="auto" src="files/imagem_grupo_artista.png" alt="banner com todos artistas">
             </picture>
         </div>
         <div class="texto-sobre-artistas">
